--- a/PopOpen.Tests/PopOpen.Tests.csproj
+++ b/PopOpen.Tests/PopOpen.Tests.csproj
@@ -52,14 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RestartManagerTests.cs" />
-    <Compile Include="TestTemp1.cs" />
+    <Compile Include="ProcessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestTemp2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Word.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PopOpen\PopOpen.csproj">
