--- a/PopOpen/PopOpen.csproj
+++ b/PopOpen/PopOpen.csproj
@@ -40,9 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DetectOpenFiles.cs" />
+    <Compile Include="IFindProcess.cs" />
+    <Compile Include="InUseDetection.cs" />
+    <Compile Include="ProcessDetective.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Win32Processes.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
