--- a/PopOpen.Tests/PopOpen.Tests.csproj
+++ b/PopOpen.Tests/PopOpen.Tests.csproj
@@ -42,6 +42,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Machine.Specifications.Should.0.7.2\lib\net45\Machine.Specifications.Should.dll</HintPath>
     </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1502.0911\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.EnterpriseServices" />
@@ -52,9 +55,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PopOpenerTests.cs" />
-    <Compile Include="ProcessTests.cs" />
+    <Compile Include="Integrations\PopOpenerTests.cs" />
+    <Compile Include="Integrations\ProcessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Units\PopOpenerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -75,6 +79,7 @@
       <Name>PopOpen</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
