--- a/PopOpen.Tests/packages.config
+++ b/PopOpen.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Machine.Specifications" version="0.7.0" targetFramework="net45" />
   <package id="Machine.Specifications.Should" version="0.7.2" targetFramework="net45" />
+  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
 </packages>
