--- a/Pop.Tests/Pop.Tests.csproj
+++ b/Pop.Tests/Pop.Tests.csproj
@@ -74,7 +74,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Pop\Pop.Cs.csproj">
+    <ProjectReference Include="..\Pop.Cs\Pop.Cs.csproj">
       <Project>{67f4ee66-476f-4ebf-969d-388327738918}</Project>
       <Name>Pop.Cs</Name>
     </ProjectReference>
