add powerpoint files to test

--- a/PopFs.Tests/PopFs.Tests.fsproj
+++ b/PopFs.Tests/PopFs.Tests.fsproj
@@ -53,6 +53,9 @@
     <Compile Include="PopOpenTests.fs" />
     <None Include="packages.config" />
     <None Include="app.config" />
+    <None Include="Powerpoint 2.pptx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Word.docx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -60,6 +63,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Excel 2.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Powerpoint 1.pptx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
