--- a/Pop/Pop.fsproj
+++ b/Pop/Pop.fsproj
@@ -56,6 +56,7 @@
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
+    <VisualStudioVersion Condition=" '$(VisualStudioVersion)' == '' ">12.0</VisualStudioVersion>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
   <Choose>
