--- a/Pop/Pop.nuspec
+++ b/Pop/Pop.nuspec
@@ -4,15 +4,15 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <authors>Andrew Chaa</authors>
-    <owners>Huddle</owners>
+    <authors>$author$</authors>
+    <owners>$author$</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>https://github.com/andrewchaa/PopOpen</projectUrl>
+    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Open a document in the foreground by elevated the opening process to the top window</description>
-    <releaseNotes></releaseNotes>
-    <copyright>Copyleft 2015</copyright>
-    <tags>Windows, Open, Win api</tags>
+    <description>$description$</description>
+    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <copyright>Copyright 2015</copyright>
+    <tags>Tag1 Tag2</tags>
   </metadata>
 </package>
