--- a/PopFs.Tests/PopFs.Tests.fsproj
+++ b/PopFs.Tests/PopFs.Tests.fsproj
@@ -50,6 +50,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="PopOpenTests.fs" />
+    <Compile Include="InUseDetectorTests.fs" />
     <None Include="packages.config" />
     <None Include="app.config" />
     <None Include="Powerpoint 2.pptx">
@@ -72,6 +73,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Pop.Cs\Pop.Cs.csproj">
+      <Name>Pop.Cs</Name>
+      <Project>{67f4ee66-476f-4ebf-969d-388327738918}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <Reference Include="FsUnit.NUnit">
       <HintPath>..\packages\FsUnit.1.3.0.1\Lib\Net40\FsUnit.NUnit.dll</HintPath>
       <Private>True</Private>
