--- a/PopFs.Tests/PopFs.Tests.fsproj
+++ b/PopFs.Tests/PopFs.Tests.fsproj
@@ -50,6 +50,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="PopOpenTests.fs" />
+    <Compile Include="PopOpenIntegrationTests.fs" />
     <Compile Include="InUseDetectorTests.fs" />
     <None Include="packages.config" />
     <None Include="app.config" />
