working on async

--- a/PopFs.Tests/PopFs.Tests.fsproj
+++ b/PopFs.Tests/PopFs.Tests.fsproj
@@ -72,6 +72,7 @@
     <Content Include="IAmTextFile.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Sandbox.fsx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pop.Cs\Pop.Cs.csproj">
