check process handle and lock handle at the same time

--- a/PopFs.Tests/PopFs.Tests.fsproj
+++ b/PopFs.Tests/PopFs.Tests.fsproj
@@ -73,6 +73,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Sandbox.fsx" />
+    <None Include="Picture.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Pop.Cs\Pop.Cs.csproj">
