renamed to unit and integrationon tests

--- a/PopFs.Tests/PopFs.Tests.fsproj
+++ b/PopFs.Tests/PopFs.Tests.fsproj
@@ -49,8 +49,8 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
-    <Compile Include="PopOpenTests.fs" />
-    <Compile Include="PopOpenIntegrationTests.fs" />
+    <Compile Include="UnitTests.fs" />
+    <Compile Include="IntegrationTests.fs" />
     <Compile Include="InUseDetectorTests.fs" />
     <None Include="packages.config" />
     <None Include="app.config" />
